# tauri-desktop-shell-sidecar-template

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEV.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release-beta.yml  release-official.yml
sidecar-src/: Cargo.toml
sidecar-src/src/: main.rs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: NavBar.tsx
src/pages/: HomePage.tsx  SettingsPage.tsx
src/test/: setup.ts
